# Sigminer

./: .gitignore  CMakeLists.txt  QuickApprove.sh  README.md
include/sigminer/: sigminer.h  signature.h
src/: type_classifier.cpp
src/internal/: type_classifier.h
